add image and content

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crystal Dev</title>
     <!-- Include Tailwind CSS from CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100">
-    <div class="container mx-auto p-4">
-        <h1 class="text-3xl font-semibold mb-4">Crystal Dev</h1>
-        <p class="text-gray-700">
-            Yo! We're <strong class="font-semibold">Crystal Dev</strong>, b*tch!
-        </p>
-        <p class="text-gray-700">
-            We may not be cooking up blue meth anymore, but we're still cooking up some seriously awesome software solutions.
-        </p>
-        <p class="text-gray-700">
-            Our name is a tribute to our days in the meth game - we figured if we could make some of the purest meths out there, we could make some pretty pure code too. And we were right!
-        </p>
-        <p class="text-gray-700">
-            We like to keep things interesting around here, so we're not afraid to mix things up. We're big fans of Breaking Bad - I mean, who isn't? - and we like to draw inspiration from the show. And we're not gonna lie, we like to indulge in a little green now and then. It keeps us loose and creative.
-        </p>
-        <p class="text-gray-700">
-            But when it comes down to it, we're serious about our work. We put in the long hours, stay on top of the latest tech, and make sure our code is tight. We're the best in the business and are not afraid to show it.
-        </p>
-        <p class="text-gray-700">
-            So if you need some pure software like the blue stuff, hit us up. (Just remember, it's all in good fun, inspired by Breaking Bad!)
-        </p>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-gray-900 flex items-center justify-center h-screen">
+    <div class="text-center">
+      <img src="crystal.png" alt="Crystal Dev Logo" class="mx-auto" />
+      <h1 class="text-xl font-semibold text-white">
+        Yo! We're
+        <strong class="font-semibold text-blue-500 text-5xl">Crystal Dev</strong
+        >, b*tch!
+      </h1>
+
+      <a
+        href="https://github.com/crystaldevorg"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="text-white hover:text-blue-400 transition duration-300"
+      >
+        <i class="fab fa-github text-5xl mt-10"></i>
+      </a>
     </div>
-</body>
+  </body>
 </html>
