--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-gray-900 flex items-center justify-center h-screen">
+  <body class="bg-gray-800 flex items-center justify-center h-screen">
     <div class="text-center">
       <img src="crystal.png" alt="Crystal Dev Logo" class="mx-auto" />
       <h1 class="text-xl font-semibold text-white">
         Yo! We're
-        <strong class="font-semibold text-blue-500 text-5xl">Crystal Dev</strong
+        <strong class="font-semibold text-blue-500 text-3xl sm:text-5xl"
+          >Crystal Dev</strong
         >, b*tch!
       </h1>
 
