--- a/index.html
+++ b/index.html
@@ -13,25 +13,68 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
       rel="stylesheet"
     />
+
+    <style>
+      @keyframes fadeInDown {
+        0% {
+          opacity: 0;
+          transform: translateY(-20px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      .animate-fadeInDown {
+        animation: fadeInDown 1s ease;
+      }
+    </style>
   </head>
-  <body class="bg-gray-800 flex items-center justify-center h-screen">
+  <body
+    class="bg-gray-800 flex items-center justify-center h-screen animate-fadeInDown"
+  >
     <div class="text-center">
       <img src="crystal.png" alt="Crystal Dev Logo" class="mx-auto" />
-      <h1 class="text-xl font-semibold text-white">
+      <h1 class="text-xl font-thin text-white">
         Yo! We're
-        <strong class="font-semibold text-blue-500 text-3xl sm:text-5xl"
-          >Crystal Dev</strong
+        <strong
+          class="font-semibold text-pink-500 text-3xl sm:text-5xl tracking-tighter font-mono"
+          >CrystalDev</strong
         >, b*tch!
       </h1>
 
-      <a
-        href="https://github.com/crystaldevorg"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="text-white hover:text-blue-400 transition duration-300"
-      >
-        <i class="fab fa-github text-5xl mt-10"></i>
-      </a>
+      <div>
+        <a
+          href="https://github.com/crystaldevorg"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-white hover:text-blue-400 transition duration-300"
+        >
+          <i class="fab fa-github text-5xl mt-10"></i>
+        </a>
+
+        <p
+          class="font-mono text-white text-sm mt-10 border-gray-600 border p-4"
+        >
+          by
+          <a
+            href="https://github.com/dielduarte"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-yellow-500 hover:text-orange-400 transition duration-300 font-bold"
+            >@dielduarte</a
+          >
+          and
+          <a
+            href="https://github.com/rodrigoea"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-yellow-500 hover:text-orange-400 transition duration-300 font-bold"
+            >@rodrigoea</a
+          >
+        </p>
+      </div>
     </div>
   </body>
 </html>
