--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         animation: fadeInDown 1s ease;
       }
     </style>
+    <!-- Matomo Tag Manager -->
+    <script>
+      var _mtm = window._mtm = window._mtm || [];
+      _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+      (function() {
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src='https://cdn.matomo.cloud/rodrigoantinarelli.matomo.cloud/container_z5dxsWfy.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Matomo Tag Manager -->
   </head>
   <body
     class="bg-gray-800 flex items-center justify-center h-screen animate-fadeInDown"
